# TEI2

Aufgabenblatt_3/: bsp.s  bspD  bspcpp.cpp  func.h  macrobsp.c  macroprog  makefile  prog  testi  wurzelbsp
Aufgabenblatt_3/Archiv/: Test  Test1  a.out  bsp.c  makefile  meinecpp  variable_init  variable_init.c  variable_init.s
Aufgabenblatt_3/Archiv/variable_init.dSYM/Contents/: Info.plist
Aufgabenblatt_3/Archiv/variable_init.dSYM/Contents/Resources/DWARF/: variable_init
Aufgabenblatt_4/src/: CMakeLists.txt  bsp.c  func.h
Matrix_Vector/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h  main.cpp  pointertest.cpp
